--- a/CursoMVCApi/CursoMVCApi.csproj
+++ b/CursoMVCApi/CursoMVCApi.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Models\user.cs">
       <DependentUpon>DB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\WS\AnimalViewModel.cs" />
     <Compile Include="Models\WS\ListAnimalesViewModel.cs" />
     <Compile Include="Models\WS\Reply.cs" />
     <Compile Include="Models\WS\SecurityViewModel.cs" />
